// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@list-item: component checks * template matches snapshot * description 1`] = `
<@theme(ListItem)
  description="Description"
  forwardedRef={null}
/>
`;

exports[`@list-item: component checks * template matches snapshot * description should render text passed to description prop 1`] = `
<@theme(ListItem)
  description="I love Babel"
  forwardedRef={null}
/>
`;

exports[`@list-item: component checks * template matches snapshot * text styles 1`] = `
<@theme(ListItem)
  description="Description"
  descriptionStyle={
    Object {
      "color": "blue",
      "letterSpacing": 6,
    }
  }
  forwardedRef={null}
  title="I love Babel"
  titleStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;

exports[`@list-item: component checks * template matches snapshot * title 1`] = `
<@theme(ListItem)
  forwardedRef={null}
  title="I love Babel"
/>
`;

exports[`@list-item: component checks * template matches snapshot * title should render text passed to title prop 1`] = `
<@theme(ListItem)
  forwardedRef={null}
  title="I love Babel"
/>
`;

exports[`@list-item: component checks * template matches snapshot * with accessory 1`] = `
<@theme(ListItem)
  accessory={[Function]}
  description="Description"
  forwardedRef={null}
  title="I love Babel"
/>
`;

exports[`@list-item: component checks * template matches snapshot * with accessory should render components passed to accessoryLeft or accessoryRight props 1`] = `
<Image
  source={
    Object {
      "uri": "https://i.imgur.com/0y8Ftya.jpg",
    }
  }
  style={
    Object {
      "style": Object {},
    }
  }
/>
`;

exports[`@list-item: component checks * template matches snapshot * with icon 1`] = `
<@theme(ListItem)
  description="Description"
  forwardedRef={null}
  icon={[Function]}
  title="I love Babel"
/>
`;
